# optimization-eg551-practical

./: Cargo.toml  README.md
output/week01/: table_data.csv
src/: lib.rs  main.rs
src/common/: csv.rs  debug.rs  mod.rs  plot.rs  timing.rs
src/week01_graphing/: mod.rs  problems.rs
src/week02_neville/: mod.rs  neville.rs  neville_functional.rs  problems.rs  stock.rs  types.rs
src/week03_golden_section/: gss.rs  mod.rs  types.rs
src/week04_lagrange_multiplier/: mod.rs
src/week05_linear_least_squares/: mod.rs
src/week06_nonlinear_least_squares/: mod.rs
src/week07_multidim_minimization/: mod.rs
src/week08_conjugate_gradient/: mod.rs
src/week09_genetic_algorithms/: mod.rs
src/week10_simulated_annealing/: mod.rs
